# openEnv

./: .dockerignore  .gitignore  Dockerfile  README.md  baseline_scores.json  client.py  env.example  inference.py  inference_log.txt  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  data_generator.py  environment.py  ui.html
server/tasks/: task1_missing.py  task2_format.py  task3_pipeline.py  task4_merge.py
